--- a/gerador de senhas/style.css
+++ b/gerador de senhas/style.css
@@ -22,14 +22,16 @@ body{
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-image: linear-gradient(to top, var(--ice), var(--RoyalBlue));
+    background-color: #0a69b7;
 }
 
 header h1{
     display: flex;
     justify-content: center;
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding: 30px;
+    color: white;
+    text-shadow: 10px 1px 10px black;
 }
 
 main{
@@ -115,4 +117,10 @@ main div{
     height: 40px;
     background-color: var(--blue);
     border-radius: 10px;
+    color: white;
+
+}
+
+.gerar-senha:hover{
+    background-color: #191970
 }
